fix: restore compatibility with Java 8 (#186)